added table of cell counts

--- a/SingleCellTrajectories_Clustering.Rmd
+++ b/SingleCellTrajectories_Clustering.Rmd
@@ -47,7 +47,7 @@ My expectations are as follows:
 
 ```{r}
 #Loading packages, importing data
-setwd('/Users/thomasyoung/Dropbox/MovieProcessing/SSA_OtherAnalyses/')
+setwd('/Users/thomasyoung/Dropbox/DataScienceProjects/SSA_OtherAnalyses/')
 source('./functions/timeseries_func.Rd')
 source('./functions/func.Rd')
 source('./functions/Preprocessing_func.Rd')
@@ -70,7 +70,7 @@ yfp = read.csv('./CombinedData/yfpcells_offatdox_alive5hafter.csv')
 info = read.csv('./CombinedData/info_offatdox_alive5hafter.csv')
 ```
 
-The data consists of cells that start off YFP negative.  This restriction is needed to exclude RFP- cells, since these tend to be YFP positive. This notebook is only concerned about the trajectories of RFP positive cells.
+The data consists of cells that start off YFP negative.  This restriction is needed to exclude RFP- cells, since these tend to be YFP positive. This notebook is only concerned about the trajectories of RFP positive cells.  Counts of single cell trajectories for each age, strain grouping are shown below.
 
 ```{r}
 #Selecting cells of strains to look at
@@ -81,6 +81,10 @@ info = info[tokeep,]
 info$replabel = as.factor(info$replabel)
 rfp$replabel = as.factor(rfp$replabel)
 yfp$replabel = as.factor(yfp$replabel)
+
+#counts of the number of cells/trajectories for each age/strain grouping
+info %>% group_by(expage,expstrain) %>% summarise(count = n())
+
 ```
 
 ```{r}
@@ -131,6 +135,7 @@ flm = mutate(flm,bipostdox = bi - ageatdox)
 
 #Only limit ourselves to prior to the 25th fluorsecent measurement
 flm = filter(flm,fltime < 25)
+
 ```
 
 Let's start of by taking a look at individual RFP trajectories for the different age groups and strains.
