Cleaned up introductory text

--- a/SingleCellTrajectories_Clustering.Rmd
+++ b/SingleCellTrajectories_Clustering.Rmd
@@ -5,17 +5,12 @@ output: html_notebook
 
 In this addendum analyses, I cluster single cell RFP fluorescence measurements among yeast cells from a study that measured how a specific DNA repair pathway changes with replicative age. That study found that a specific DNA repair pathway called SSA declines in efficiency from 90% to about 70% when comparing young (< 5 generation old) and older (~18 generation old) cells. I subsequently showed that this decline in efficiency was linked to changes in cell cycle progression in older cells. 
 
-### What kind of data was collected in the previous study? 
-In the previous study, the fluorescence of individual old and young yeast cells were measured over time. During that time period a double strand break was induced a single cassette in the genome, and repair was measured using a fluorescent YFP reporter that was designed to be produced if SSA occurred . Production of YFP signal after its absence was used to assess whether SSA repair occurred.
+### Why cluster the RFP trajectories?
+In the previous study, the fluorescence of individual old and young yeast cells were measured over time. During that time period a double strand break was induced a single cassette in the genome, and repair was measured using a fluorescent YFP reporter that was designed to be produced if SSA succesfully occurred . Production of YFP signal after its absence was used to assess whether SSA repair occurred.
 
 The repair cassette also contained a RFP expression sequence directly adjacent to the cut site. Cutting of the cassette would be expected to halt production of RFP mRNA. Dilution of existing RFP by cell growth would result in a decline in RFP fluorescence. Permanent loss of the RFP gene by SSA, other repair pathways, or lack of repair combined with dilution would eventually cause fluorescence to decline to background levels. Therefore, drops in RFP fluorescence can be a potential reporter for cutting of the repair cassette and/or repair.
 
-Cell division provides a third important piece of information about the cells in the study. Cells typically arrest their cell cycle in response to DNA double-strand breaks. A halt in cell division can provide potential evidence of DNA damage induced cell cycle arrest. Cell division also typically slows down as cells reach the end of their replicative lifespan, so a slow down can provide evidence that cell's are indeed old.  Finally cell division events provide important context for the YFP and RFP signal. Rapidly dividing cells would be expected to have a lower YFP and RFP signals, for the same rate of YFP and RFP protein production.  In this study, cell division was measured by the time of appearance of daughter buds in each cell.
-
-Looking at measurements of YFP, RFP, and cell division in individual cells could provide valuable insight into the dynamics of repair.  The timing of YFP production could indicate the speed of repair or expression following repair. The timing of RFP loss, accounting for cell division, could indicate the timing of cutting of the cassette. The previous study already showed that changes in cell division with age drive changes in SSA repair efficiency (fraction of cells that are able to repair). Due to their potential to provide insight into DNA repair for the cells in the experiment, it makes sense to pursue a a thorough investigation of the single cell measurement trajectories.
-
-### Why cluster the RFP trajectories?
-Clustering can reveal general patterns of behavior for the reporters in single cells. Knowing whether there are clusters of cells with similar trajectories helps in the development of hypotheses about what factors explain these similarities. Comparing the fractions of cells in clusters between strains with different genetic modifications, can provide a fuller picture of how the reporter behaves differently in different strains. Lastly, clusters can be used as a rough check for whether the reporters behave as expected. Due to their high variability and the difficulty of inspecting them by eye, the analysis of RLS trajectories would benefit most from a cluster based analysis. With YFP trajectories it is already easy enough to distinguish cells based on when they go from being YFP negative to YFP positive.
+Clustering can reveal general patterns of behavior for the reporters in single cells. Knowing whether there are clusters of cells with similar trajectories helps in the development of hypotheses about what factors explain these similarities. Comparing the fractions of cells in clusters between strains with different genetic modifications, can provide a fuller picture of how the reporter behaves differently in different strains. Lastly, clusters can be used as a rough check for whether the reporters behave as expected. Due to their high variability and the difficulty of inspecting them by eye, the analysis of RFP trajectories would benefit most from a cluster based analysis. With YFP trajectories it is already easy enough to distinguish cells based on when they go from being YFP negative to YFP positive.
 
 Of course, the identification of clusters of single cell reporter trajectories is only a first step in making sense of the reporter measurements. For example the average trajectory for a cluster can still differ in important ways from any individual trajectory in the cluster. For an individual cell, there can be useful information in addition to cluster membership. Specific aspects of the trajectory (like when YFP appears) are also relevant to understanding how repair changes in cells as they age. These will be explored in a separate notebook.
 
